--- a/display.html
+++ b/display.html
@@ -98,7 +98,7 @@
           nameCell.textContent = item.name;
 
           const genderCell = document.createElement('td');
-          genderCell.textContent = item.name;
+          genderCell.textContent = item.gender;
 
           const addressCell = document.createElement('td');
           addressCell.textContent = item.address;
